# pomodoro

./: .p10k-segment.zsh  Cargo.toml  README.md  com.grosto.pomodoro.plist  install.sh
.github/workflows/: rust.yml
src/: client.rs  lib.rs  main.rs  pomodoro.rs  request.rs  shared.rs
