[package]
name = "pomodoro"
version = "0.1.0"
authors = ["giorgi.rostomashvili <giorgi.rostomashvili@inthepocket.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac-notification-sys = "0.3"
clap = "2.33.3"
anyhow = "1.0.38"